--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: Michelle Chekwoti's Data Blog
+description: Practical data notes, curious explorations, and portfolio logic
+baseurl: "" 
+url: "https://tintin-dataobsessed.github.io"
+theme: minima
+plugins:
+  - jekyll-feed
 
