--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Michelle Chekwoti's Data Blog
+title: "Michelle Chekwoti's Data Blog"
 description: Practical data notes, curious explorations, and portfolio logic
 baseurl: "" 
 url: "https://tintin-dataobsessed.github.io"
