--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,11 @@ email: your-email@example.com  # Optional — update or remove
 url: ""  # Leave blank for GitHub Pages automatic deployment
 
 baseurl: ""  # Leave this empty unless your blog is in a subfolder
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
-theme: jekyll-theme-minimal
+
 
 plugins:
   - jekyll-feed
