--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,6 @@
-title: "Michelle Chekwoti's Data Blog"
-description: "Practical data notes, curious explorations, and portfolio logic"
-author: "Michelle Chekwoti"
-email: your-email@example.com  # Optional — update or remove
-url: ""  # Leave blank for GitHub Pages automatic deployment
-
-baseurl: ""  # Leave this empty unless your blog is in a subfolder
-theme: jekyll-theme-minimal
-plugins:
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
-  - jekyll-feed
-  - jekyll-seo-tag
-
-markdown: kramdown
-
-show_excerpts: true
-
-# Navigation links (optional)
-header_pages:
-  - index.md
-  - about.md  # You can create this later if you like
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-cayman
 
